--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Karanvir Jassal"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/award.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Computer Science Portfolio"
   location         : "Chantilly, Virginia"
   email            :
@@ -129,7 +129,7 @@ author:
     - label: "GitHub"
       icon: "GitHub"
       url: "https://github.com/Karanvir01"
-      
+
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
